--- a/mpush_ios_demo/mpush_ios_demo/Base.lproj/LaunchScreen.xib
+++ b/mpush_ios_demo/mpush_ios_demo/Base.lproj/LaunchScreen.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,41 +11,30 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="云推送logo2" translatesAutoresizingMaskIntoConstraints="NO" id="Ujd-2s-hr1">
+                    <rect key="frame" x="50" y="89" width="380" height="144"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="144" id="4SX-WK-tDW"/>
+                    </constraints>
+                </imageView>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright (c) 2015年 alibaba. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
-                    <rect key="frame" x="20" y="439" width="441" height="21"/>
+                    <rect key="frame" x="40" y="439" width="400" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="云推送logo2" translatesAutoresizingMaskIntoConstraints="NO" id="Ujd-2s-hr1">
-                    <rect key="frame" x="50" y="89" width="380" height="144"/>
-                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
-                <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
-                <constraint firstAttribute="trailing" secondItem="Ujd-2s-hr1" secondAttribute="trailing" constant="8" id="RuS-kw-pQ1"/>
-                <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
-                <constraint firstItem="Ujd-2s-hr1" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="99" id="c0W-eF-znA"/>
-                <constraint firstItem="Ujd-2s-hr1" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="eAp-h6-08I"/>
+                <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="40" id="N3G-Gj-9W9"/>
+                <constraint firstAttribute="trailing" secondItem="Ujd-2s-hr1" secondAttribute="trailing" constant="50" id="Niv-1y-wTx"/>
+                <constraint firstItem="Ujd-2s-hr1" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="89" id="WEM-JC-T3m"/>
+                <constraint firstItem="Ujd-2s-hr1" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="50" id="asy-Xk-Bii"/>
+                <constraint firstAttribute="trailing" secondItem="8ie-xW-0ye" secondAttribute="trailing" constant="40" id="wfQ-mQ-Whk"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <variation key="default">
-                <mask key="constraints">
-                    <exclude reference="RuS-kw-pQ1"/>
-                    <exclude reference="c0W-eF-znA"/>
-                    <exclude reference="eAp-h6-08I"/>
-                </mask>
-            </variation>
-            <variation key="widthClass=compact">
-                <mask key="constraints">
-                    <include reference="RuS-kw-pQ1"/>
-                    <include reference="c0W-eF-znA"/>
-                    <include reference="eAp-h6-08I"/>
-                </mask>
-            </variation>
             <point key="canvasLocation" x="338" y="357"/>
         </view>
     </objects>
