信息界面的UI
在AppDelegate 和 MPushMessageViewController 里面分别了完善代码，

--- a/mpush_ios_swift_demo/mpush_ios_swift_demo/Main.storyboard
+++ b/mpush_ios_swift_demo/mpush_ios_swift_demo/Main.storyboard
@@ -32,7 +32,7 @@
                                 <rect key="frame" x="0.0" y="64" width="414" height="623"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="TT0-iD-uGW">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pushMessageCell" id="TT0-iD-uGW">
                                         <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TT0-iD-uGW" id="Y53-F1-TeC">
